@@ -91,8 +91,4 @@ gboolean   nm_network_menu_item_find_dupe (NMNetworkMenuItem *item,
 void       nm_network_menu_item_add_dupe (NMNetworkMenuItem *item,
                                           NMAccessPoint *ap);
 
-/* Helper function; escapes an essid for human readable display. */
-char *     nm_menu_network_escape_essid_for_display (const char *essid);
-
-
 #endif /* MENU_INFO_H */
