@@ -1,5 +1,13 @@
 2007-10-24  Dan Williams  <dcbw@redhat.com>
 
+	* src/menu-items.h
+	  src/menu-items.c
+		- (nm_network_menu_item_set_ssid): use nm_utils_ssid_to_utf8()
+		- (eel_make_valid_utf8, nm_menu_network_escape_essid_for_display):
+			remove
+
+2007-10-24  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/wireless-security.c
 	  src/wireless-security/wireless-security.h
 		- (ws_802_1x_auth_combo_init): add a 'default_method' argument used to
